# red-sparrow

./: .gitlab-ci.yml  Dockerfile.txt  README.md  docker-compose.yml  install.bat  install.ps1  install.sh  pyproject.toml  red-sparrow.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
