[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "red-sparrow"
version = "2.0.0"
description = "Ultimate Multi-Platform Phishing & Command Center"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Proprietary"}
authors = [
    {name = "Ian Carter Kulani", email = "ian@redsparrow.local"}
]
keywords = [
    "security",
    "penetration-testing",
    "phishing",
    "nmap",
    "nikto",
    "ssh",
    "traffic-generation",
    "spoofing",
    "discord-bot",
    "telegram-bot"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/redsparrow/red-sparrow"
"Bug Reports" = "https://github.com/redsparrow/red-sparrow/issues"
"Documentation" = "https://docs.redsparrow.local"
"Source" = "https://github.com/redsparrow/red-sparrow"

[project.scripts]
redsparrow = "red_sparrow:main"
red-sparrow = "red_sparrow:main"

[tool.black]
line-length = 120
target-version = ["py37", "py38", "py39", "py310", "py311", "py312"]
include = "\\.pyi?$"
extend-exclude = '''
/(
    \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v --cov=redsparrow --cov-report=html --cov-report=term"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.bandit]
exclude_dirs = ["tests", "docs", "venv", ".venv"]
skips = ["B101", "B104", "B110"]