[metadata]
name = red-sparrow
version = 2.0.0
description = Ultimate Multi-Platform Phishing & Command Center
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/redsparrow/red-sparrow
author = Ian Carter Kulani
author_email = ian@redsparrow.local
license = Proprietary
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Topic :: Security
    Topic :: Internet :: WWW/HTTP
    Topic :: System :: Networking
    Topic :: System :: Systems Administration
    License :: Other/Proprietary License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    cryptography>=41.0.0
    paramiko>=3.3.0
    requests>=2.31.0
    psutil>=5.9.0
    colorama>=0.4.6
    Flask>=2.3.0
    flask-socketio>=5.3.0
    discord.py>=2.3.0
    telethon>=1.34.0
    slack-sdk>=3.25.0
    selenium>=4.15.0
    webdriver-manager>=4.0.0
    scapy>=2.5.0
    python-whois>=0.8.0
    qrcode>=7.4.0
    pyshorteners>=1.0.1
    pyyaml>=6.0
    python-dotenv>=1.0.0
    rich>=13.5.0
    tqdm>=4.66.0
    beautifulsoup4>=4.12.0
    lxml>=4.9.0
    sqlalchemy>=2.0.0
    prometheus-client>=0.19.0

[options.packages.find]
exclude =
    tests
    tests.*
    docs
    docs.*
    examples
    examples.*

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    black>=23.7.0
    flake8>=6.1.0
    mypy>=1.5.0
    pylint>=2.17.0
    bandit>=1.7.5
    isort>=5.12.0
docs =
    sphinx>=7.1.0
    sphinx-rtd-theme>=1.3.0
test =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    pytest-asyncio>=0.21.0
    pytest-mock>=3.11.0

[options.entry_points]
console_scripts =
    redsparrow = red_sparrow:main
    red-sparrow = red_sparrow:main

[tool:black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
  )/
)
'''

[tool:pytest]
addopts = -v --cov=redsparrow --cov-report=html --cov-report=term
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*

[tool:flake8]
max-line-length = 120
exclude =
    .git,
    __pycache__,
    venv,
    build,
    dist,
    .mypy_cache,
    .pytest_cache
ignore =
    E203,
    W503,
    E731,
    E741

[tool:mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
ignore_missing_imports = True

[tool:pylint]
max-line-length = 120
disable =
    C0111,
    C0103,
    C0413,
    W0611,
    W0613,
    W0621,
    W1203,
    R0902,
    R0903,
    R0913,
    R0914,
    R0915

[tool:isort]
profile = black
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true